--- a/templates/authors.html
+++ b/templates/authors.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="stylesSE.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='stylesSE.css')}}">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
@@ -21,8 +21,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark nb-background-color">
     <!-- lg = large breakpoint, navbar-light = make text dark, headerBG = custom css BG color -->
         <div class="container">
-            <a href="index.html" class="navbar-brand">
-                <img src="img/bacterialogo.png" alt="E-coli Logo" class="img-fluid d-inline-block align-text-top logo">
+            <a href="{{url_for('index')}}" class="navbar-brand">
+                <img src="{{url_for('static', filename='/img/bacterialogo.png')}}" alt="E-coli Logo" class="img-fluid d-inline-block align-text-top logo">
             </a>
 
             <!-- Hamburger Menu Button-->
@@ -35,13 +35,13 @@
                 <!-- Links to hamburger menu button -->
                 <ul class="navbar-nav ms-auto">   <!-- ms-auto is margin spacing-->
                     <li class="nav-item">
-                        <a href="authors.html" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
+                        <a href="{{url_for('authors')}}" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
                     </li>
                     <li class="nav-item">
-                        <a href="procedure.html" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
+                        <a href="{{url_for('procedure')}}" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
                     </li>
                     <li class="nav-item">
-                        <a href="results.html" class="nav-link hover-underline-animation nbMenuItem">Result</a>
+                        <a href="{{url_for('results')}}" class="nav-link hover-underline-animation nbMenuItem">Result</a>
                     </li>
                 </ul>
             </div>
@@ -60,7 +60,7 @@
         <div class = "row row-cols-2 row-cols-md-1 g-4">
             <div class="col">
                 <div class = "card about">
-                    <img class = "card-img-top" src="img/desmond.jpeg" alt = "Picture of Desmond Pepe">
+                    <img class = "card-img-top" src="{{url_for('static', filename='/img/desmond.jpeg')}}" alt = "Picture of Desmond Pepe">
                     <div class = "card-body">
                         <h4 class = "card-title">Desmond Pepe</h4>
                         <p class = "card-text informationTextColor">Principal Investigator on the Project</p>
@@ -70,7 +70,7 @@
             </div>
             <div class="col">
                 <div class = "card about">
-                    <img class = "card-img-top" src="img/martarambaud.jpeg" alt = "Picture of Marta Rambaud">
+                    <img class = "card-img-top" src="{{url_for('static', filename='/img/martarambaud.jpeg')}}" alt = "Picture of Marta Rambaud">
                     <div class = "card-body">
                         <h4 class = "card-title">Marta Rambaud</h4>
                         <p class = "card-text informationTextColor">Supervising Research Mentor</p>
