--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="stylesSE.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='stylesSE.css')}}">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
@@ -22,7 +22,7 @@
     <!-- lg = large breakpoint, navbar-light = make text dark, headerBG = custom css BG color -->
         <div class="container">
             <a href="#" class="navbar-brand">
-                <img src="img/bacterialogo.png" alt="E-coli Logo" class="img-fluid d-inline-block align-text-top logo">
+                <img src="{{url_for('static', filename='/img/bacterialogo.png')}}" alt="E-coli Logo" class="img-fluid d-inline-block align-text-top logo">
             </a>
 
             <!-- Hamburger Menu Button-->
@@ -35,13 +35,13 @@
                 <!-- Links to hamburger menu button -->
                 <ul class="navbar-nav ms-auto">   <!-- ms-auto is margin spacing-->
                     <li class="nav-item">
-                        <a href="authors.html" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
+                        <a href="{{url_for('authors')}}" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
                     </li>
                     <li class="nav-item">
-                        <a href="procedure.html" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
+                        <a href="{{url_for('procedure')}}" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
                     </li>
                     <li class="nav-item">
-                        <a href="results.html" class="nav-link hover-underline-animation nbMenuItem">Results</a>
+                        <a href="{{url_for('results')}}" class="nav-link hover-underline-animation nbMenuItem">Result</a>
                     </li>
                 </ul>
             </div>
@@ -83,7 +83,7 @@
                     </ul>
                 </div>
                 <div class = "col-sm-4 p-4">
-                    <img class = "img-fluid" src = "img/spreadofantibioticresistance.png" alt = "Graph of the increase in antibiotic resistance in bacteria">
+                    <img class = "img-fluid" src="{{url_for('static', filename='/img/spreadofantibioticresistance.png')}}" alt = "Graph of the increase in antibiotic resistance in bacteria">
                 </div>
             </div>   
             <div class="row">
