--- a/templates/procedure.html
+++ b/templates/procedure.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="stylesSE.css">
+    <link rel="stylesheet" href="{{url_for('static', filename='stylesSE.css')}}">
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
@@ -21,8 +21,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark nb-background-color">
     <!-- lg = large breakpoint, navbar-light = make text dark, headerBG = custom css BG color -->
         <div class="container">
-            <a href="index.html" class="navbar-brand">
-                <img src="img/bacterialogo.png" alt="E-coli Logo" class="img-fluid d-inline-block align-text-top logo">
+            <a href="{{url_for('index')}}" class="navbar-brand">
+                <img src="{{url_for('static', filename='/img/bacterialogo.png')}}" alt="E-coli Logo" class="img-fluid d-inline-block align-text-top logo">
             </a>
 
             <!-- Hamburger Menu Button-->
@@ -34,15 +34,15 @@
             <div class="collapse navbar-collapse" id="navmenu">
                 <!-- Links to hamburger menu button -->
                 <ul class="navbar-nav ms-auto">   <!-- ms-auto is margin spacing-->
-                    <li class="nav-item">
-                        <a href="authors.html" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="procedure.html" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="results.html" class="nav-link hover-underline-animation nbMenuItem">Result</a>
-                    </li>
+                  <li class="nav-item">
+                    <a href="{{url_for('authors')}}" class="nav-link hover-underline-animation nbMenuItem">Authors</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{url_for('procedure')}}" class="nav-link hover-underline-animation nbMenuItem">Procedure</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{{url_for('results')}}" class="nav-link hover-underline-animation nbMenuItem">Result</a>
+                </li>
                 </ul>
             </div>
         </div>
@@ -73,7 +73,7 @@
                 <td class = "text-left">
                   <h3 class = "informationTextColor">Creation of the Indole-3-Carbinol and Ethanol Solutions</h3>
                 </td>
-                <td class="text-center"><img src="img/i3csolutions.jpeg" alt="Indole-3-Carbinol solutions in test tube"></td>
+                <td class="text-center"><img src="{{url_for('static', filename='/img/i3csolutions.jpeg')}}" alt="Indole-3-Carbinol solutions in test tube"></td>
               </tr>
               <tr class="align-middle">
                 <th scope="row">
@@ -82,7 +82,7 @@
                 <td>
                   <h3 class = "informationTextColor">Creation of the N-Acetylcysteine and Water Solutions</h3>
                 </td>
-                <td class="text-center"><img src="img/nacsolutions.jpeg" alt="N-Acetylcysteine solutions in test tube"></td>
+                <td class="text-center"><img src="{{url_for('static', filename='/img/nacsolutions.jpeg')}}" alt="N-Acetylcysteine solutions in test tube"></td>
               </tr>
               <tr class="align-middle">
                 <th scope="row">
@@ -91,7 +91,7 @@
                 <td>
                   <h3 class = "informationTextColor">Creating Plates for Bacterial Culture</h3>
                 </td>
-                <td class="text-center"><img src="img/creatingplates.jpeg" alt="Bacterial culture plates"></td>
+                <td class="text-center"><img src="{{url_for('static', filename='/img/creatingplates.jpeg')}}" alt="Bacterial culture plates"></td>
               </tr>
               <tr class="align-middle">
                 <th scope="row">
@@ -100,7 +100,7 @@
                 <td>
                   <h3 class = "informationTextColor">Culturing of E. Coli and Introduction of Treatments</h3>
                 </td>
-                <td class="text-center"><img src="img/bacterialculture.jpeg" alt="Bacterial culture plates with treatment filter disks"></td>
+                <td class="text-center"><img src="{{url_for('static', filename='/img/bacterialculture.jpeg')}}" alt="Bacterial culture plates with treatment filter disks"></td>
               </tr>
               <tr class="align-middle">
                 <th scope="row">
@@ -109,7 +109,7 @@
                 <td>
                   <h3 class = "informationTextColor">Measuring Area of Limited Growth with Dial Calipers</h3>
                 </td>
-                <td class="text-center"><img src="img/dialcaliper.png" alt="Dial caliper"></td>
+                <td class="text-center"><img src="{{url_for('static', filename='/img/dialcaliper.png')}}" alt="Dial caliper"></td>
               </tr>
               <tr class="align-middle">
                 <th scope="row">
@@ -118,7 +118,7 @@
                 <td>
                   <h3 class = "informationTextColor">Statistical Analysis of the Data in Excel</h3>
                 </td>
-                <td class="text-center"><img src="img/excellogo.png" alt="Excel logo"></td>
+                <td class="text-center"><img src="{{url_for('static', filename='/img/excellogo.png')}}" alt="Excel logo"></td>
               </tr>
             </tbody>
           </table>
